Variabilisation du repository Maven

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -5,6 +5,12 @@ name: Maven Publish
 
 on: push
 
+env:
+  MAVEN_SERVER_ID: github
+  MAVEN_SERVER_LAYOUT: default
+  MAVEN_SERVER_URI: https://maven.pkg.github.com/jimetevenard/java-hello-world-with-maven
+  MAVEN_REPOSITORY: ${{ MAVEN_SERVER_ID }}::${{ MAVEN_SERVER_LAYOUT }}::${{ MAVEN_SERVER_URI }}
+
 jobs:
   build:
 
@@ -29,7 +35,7 @@ jobs:
     - name: Publish to GitHub Packages Apache Maven
       run: >
            mvn deploy
-           -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/jimetevenard/java-hello-world-with-maven
+           -DaltDeploymentRepository=$MAVEN_REPOSITORY
            -s $GITHUB_WORKSPACE/settings.xml
       env:
         GITHUB_TOKEN: ${{ github.token }}
