--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,13 @@
   <packaging>jar</packaging>
   <version>1.0.1-SNAPSHOT</version>
   <name>Hello World with Maven</name>
-  <url>http://maven.apache.org</url>
+
+  <scm>
+    <developerConnection>scm:git:https://github.com/jimetevenard/java-hello-world-with-maven.git</developerConnection>
+    <url>https://github.com/jimetevenard/java-hello-world-with-maven</url>
+    <tag>HEAD</tag>
+  </scm>
+
 
   <build>
     <plugins>
@@ -20,6 +26,15 @@
           <arguments>
             <argument>jimetevenard</argument>
           </arguments>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <tagNameFormat>v@{project.version}</tagNameFormat>
         </configuration>
       </plugin>
     </plugins>
