--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -1,19 +1,19 @@
 name: Maven Release
 
 # i.e. uniquement lors d'un déclenchement manuel du workflow
-on: workflow_dispatch
-
-# Les inputs seront injectés sous forme de variable d'environnement par Github Actions
-# Le format sera normalisé : `Release version` devient `$INPUT_RELEASE_VERSION`
-# Voir https://docs.github.com/en/actions/creating-actions/metadata-syntax-for-github-actions#inputs
-inputs:
-  Release version:
-    description: 'Version to produce'
-    required: true
-  dev version:
-    description: 'Next SNAPSHOT version'
-    required: true
-    default: '1.0.1-SNAPSHOT'
+on:
+  workflow_dispatch:
+    inputs:
+      # Les inputs seront injectés sous forme de variable d'environnement par Github Actions
+      # Le format sera normalisé : `Release version` devient `$INPUT_RELEASE_VERSION`
+      # Voir https://docs.github.com/en/actions/creating-actions/metadata-syntax-for-github-actions#inputs
+      Release version:
+        description: 'Version to produce'
+        required: true
+      Dev version:
+        description: 'Next SNAPSHOT version'
+        required: true
+        default: '1.0.1-SNAPSHOT'
 
 jobs:
   build:
