--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -20,6 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    
+    - uses: fregante/setup-git-user@v1 # Git config user.name / user.email
 
     - name: Set up JDK 11
       uses: actions/setup-java@v2
