--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -15,6 +15,11 @@ on:
         required: true
         default: '1.0.1-SNAPSHOT'
 
+env:
+  MAVEN_SERVER_ID: github
+  MAVEN_SERVER_LAYOUT: default
+  MAVEN_SERVER_URI: https://maven.pkg.github.com/jimetevenard/java-hello-world-with-maven
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,6 +33,8 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+        settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Prepare Release
       run: >
@@ -44,3 +51,5 @@ jobs:
            -DdevelopmentVersion=$INPUT_DEV_VERSION
            -Dusername=$GITHUB_ACTOR
            -Dpassword=${{ secrets.GITHUB_TOKEN }}
+           -DaltDeploymentRepository=$MAVEN_SERVER_ID::$MAVEN_SERVER_LAYOUT::$MAVEN_SERVER_URI
+           -s $GITHUB_WORKSPACE/settings.xml
