--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -54,3 +54,5 @@ jobs:
            -Darguments="
               -DaltDeploymentRepository=$MAVEN_SERVER_ID::$MAVEN_SERVER_LAYOUT::$MAVEN_SERVER_URI
               -s $GITHUB_WORKSPACE/settings.xml"
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
