Publication Github Release

--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -21,7 +21,7 @@ env:
   
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -56,3 +56,8 @@ jobs:
               -s $GITHUB_WORKSPACE/settings.xml"
       env:
         GITHUB_TOKEN: ${{ github.token }}
+      
+    - name: Publish Github Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: target/*.jar # Attachement du jar produit à la release Github
