--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -66,7 +66,7 @@ jobs:
       id: tag-name
       run: |
            export TAG=$(git describe --tags --abbrev=0 HEAD~)
-           echo ""::set-output name=TAG::$TAG"
+           echo "::set-output name=TAG::$TAG"
     
     # Création d'une Release Github
     - name: Publish Github Release
