--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,14 +1,9 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
+# Déploiement sur le repository Maven Github Package à chaque commit
+# ==================================================================
 
 name: Maven Publish
 
 on: push
-
-env:
-  MAVEN_SERVER_ID: github
-  MAVEN_SERVER_LAYOUT: default
-  MAVEN_SERVER_URI: https://maven.pkg.github.com/jimetevenard/java-hello-world-with-maven
 
 jobs:
   build:
@@ -32,9 +27,6 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run: >
-           mvn deploy
-           -DaltDeploymentRepository=$MAVEN_SERVER_ID::$MAVEN_SERVER_LAYOUT::$MAVEN_SERVER_URI
-           -s $GITHUB_WORKSPACE/settings.xml
+      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
       env:
         GITHUB_TOKEN: ${{ github.token }}
