--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,30 @@
   <version>1.0.3-SNAPSHOT</version>
   <name>Hello World with Maven</name>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
+
   <scm>
     <developerConnection>scm:git:https://github.com/jimetevenard/java-hello-world-with-maven.git</developerConnection>
     <url>https://github.com/jimetevenard/java-hello-world-with-maven</url>
     <tag>HEAD</tag>
   </scm>
+
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <url>https://maven.pkg.github.com/jimetevenard/java-hello-world-with-maven</url>
+      <layout>default</layout>
+    </repository>
+    <snapshotRepository>
+      <id>github</id>
+      <url>https://maven.pkg.github.com/jimetevenard/java-hello-world-with-maven</url>
+      <layout>default</layout>
+    </snapshotRepository>
+  </distributionManagement>
 
 
   <build>
@@ -63,12 +82,6 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-  </properties>
 
 </project>
 
